feat(store-facade-facade): working on auth
working on auth modules

BREAKING CHANGE:
created login and registration flow

-31
